--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0">
+    <link href="css/style.css" rel="stylesheet">
+    <title>Projeto 05</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="images/logo.jpg" />
+            </div><!--logo-->
+
+            <nav class="desktop">
+                <ul>
+                    <li><a style="color: #EB2D2D;" href="">Home</a></li>
+                    <li><a href="">Sobre</a></li>
+                    <li><a href="">Venda</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </nav><!--desktop-->
+            <div class="clear"></div>
+        </div><!--container-->        
+    </header>
+
+    <section class="banner">
+        
+
+
+    </section><!--banner-->
     
 </body>
 </html>
