Finalizado estilizacao do banner

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"> 
     <title>Projeto 05</title>
 </head>
 <body>
@@ -26,9 +28,14 @@
     </header>
 
     <section class="banner">
-        
-
-
+        <div class="container">
+        <div class="text-banner">
+            <div class="text-banner-single">Consultoria</div><!--text-banner-single-->
+            <div class="text-banner-single">Compra</div><!--text-banner-single-->
+            <div class="text-banner-single">Venda</div><!--text-banner-single-->
+            <div class="text-banner-single">contato@contato.com</div><!--text-banner-single-->
+        </div><!--text-banner-->
+        </div><!--container-->
     </section><!--banner-->
     
 </body>
