--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
                     <li><a href="">Contato</a></li>
                 </ul>
             </nav><!--desktop-->
+
+            <nav class="mobile">
+                <ul>
+                    <li><a style="color: #EB2D2D;" href="">Home</a></li>
+                    <li><a href="">Sobre</a></li>
+                    <li><a href="">Venda</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </nav><!--mobile-->
+
             <div class="clear"></div>
         </div><!--container-->        
     </header>
