Adicionado sessao vitrine destaque

--- a/index.html
+++ b/index.html
@@ -52,8 +52,36 @@
         <div class="line-titulo">
             <div class="ln1"></div>    
             <h2>Veículos em destaque</h2>
+            <div class="container">
         </div><!--line-titulo-->    
+        <div class="vitrine-destaque">
+            <div style="background-image: url(/images/carro1.jpg);" class="carro-img"></div><!--carro-img-->
+            <div class="info-carro">
+                <h2>Carro de alguma marca</h2>
+                <p>Carro a combustivel de foguete, motor 5.0 bi-turbo</p>
+                <a href="#">Mais detalhes</a>
+            </div><!--info-carro-->
+        </div><!--vitrine-destaque-->
 
+        <div class="vitrine-destaque">
+            <div style="background-image: url(/images/carro1.jpg);" class="carro-img"></div><!--carro-img-->
+            <div class="info-carro">
+                <h2>Carro de alguma marca</h2>
+                <p>Carro a combustivel de foguete, motor 5.0 bi-turbo</p>
+                <a href="#">Mais detalhes</a>
+            </div><!--info-carro-->
+        </div><!--vitrine-destaque-->
+
+        <div class="vitrine-destaque">
+            <div style="background-image: url(/images/carro1.jpg);" class="carro-img"></div><!--carro-img-->
+            <div class="info-carro">
+                <h2>Carro de alguma marca</h2>
+                <p>Carro a combustivel de foguete, motor 5.0 bi-turbo</p>
+                <a href="#">Mais detalhes</a>
+            </div><!--info-carro-->
+        </div><!--vitrine-destaque-->
+        <div class="clear"></div>
+            </div><!--container-->
     </section><!--veiculos-destaque-->
     
 </body>
