Adicionado sessao depoimentos e servicos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="info-carro">
                 <h2>Carro de alguma marca</h2>
                 <p>Carro a combustivel de foguete, motor 5.0 bi-turbo</p>
-                <a href="#">Mais detalhes</a>
+                <a class="btn1" href="#">Mais detalhes</a>
             </div><!--info-carro-->
         </div><!--vitrine-destaque-->
 
@@ -68,7 +68,7 @@
             <div class="info-carro">
                 <h2>Carro de alguma marca</h2>
                 <p>Carro a combustivel de foguete, motor 5.0 bi-turbo</p>
-                <a href="#">Mais detalhes</a>
+                <a class="btn1" href="#">Mais detalhes</a>
             </div><!--info-carro-->
         </div><!--vitrine-destaque-->
 
@@ -77,12 +77,46 @@
             <div class="info-carro">
                 <h2>Carro de alguma marca</h2>
                 <p>Carro a combustivel de foguete, motor 5.0 bi-turbo</p>
-                <a href="#">Mais detalhes</a>
+                <a class="btn1" href="#">Mais detalhes</a>
             </div><!--info-carro-->
         </div><!--vitrine-destaque-->
         <div class="clear"></div>
             </div><!--container-->
     </section><!--veiculos-destaque-->
+
+    <section class="servicos-descricao">
+        <div class="half1">
+            <div class="half1-wraper">
+                <h2>Serviços</h2>
+                <ul>
+                    <li>Compra</li>
+                    <li>Venda</li>
+                    <li>Consultoria de veículos</li>     
+                    <li>Indicação de mecânicos e peças</li>           
+                </ul>
+                <a class="btn1" href="#">Saiba mais</a>
+            </div><!--half1-wraper-->
+        </div><!--half1-->
+
+        <div class="half2">
+            <h2>Depoimentos</h2>
+            <div class="depoimento-single">
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis consectetur ex totam doloribus ipsa"</p>
+                <div class="navigation">
+                    <div class="arrows">
+                        <img src="/images/arrow-left.png">
+                        <img src="/images/arrow-right.png">
+                    </div><!--arrows-->
+                    <div class="nome-depoimento">
+                        Dino da Silva Sauro
+                    </div><!--nome-depoimento-->
+                </div><!--navigation-->
+
+            </div><!--depoimento-single-->
+        </div><!--half2-->
+
+        
+    </section><!--servicos-descricao-->
     
 </body>
 </html>
