Adicionado sessao contato e rodape

--- a/index.html
+++ b/index.html
@@ -111,12 +111,55 @@
                         Dino da Silva Sauro
                     </div><!--nome-depoimento-->
                 </div><!--navigation-->
-
             </div><!--depoimento-single-->
-        </div><!--half2-->
-
-        
+        </div><!--half2-->        
     </section><!--servicos-descricao-->
+
+    <section class="contato">
+        <div class="line-titulo">
+            <div class="ln1"></div>    
+            <h2>Contato</h2>
+            <div class="container">
+        </div><!--line-titulo--> 
+        <form>
+            <div class="input-wraper w100">
+                <input placeholder="Nome*" type="text" required />
+            </div><!--input-wraper w100-->
+
+            <div class="input-wraper w50">
+                <input placeholder="E-mail*" type="text" required />
+            </div><!--input-wraper w100-->
+
+            <div class="input-wraper w50">
+                <input placeholder="Telefone*" type="text" required />
+            </div><!--input-wraper w100-->
+
+            <div class="input-wraper w100">
+                <textarea placeholder="Mensagem*" required></textarea>
+            </div><!--input-wraper w100-->
+
+            <div class="input-wraper w100">
+                <input class="btn1" type="submit" value="Enviar" />
+            </div><!--input-wraper w100-->
+            <div class="clear"></div>    
+        </form>
+    </section><!--contato-->
+
+
+    <footer>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a style="color: #EB2D2D;" href="">Home</a></li>
+                    <li><a href="">Sobre</a></li>
+                    <li><a href="">Venda</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </nav>
+        </div><!--container-->
+        <p>Todos os direitos reservados</p>
+        <div class="clear"></div>
+    </footer>
     
 </body>
 </html>
