Criado estrutura base das paginas de contato venda e sobre

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
             <nav class="desktop">
                 <ul>
                     <li><a style="color: #EB2D2D;" href="">Home</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Venda</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="venda.html">Venda</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav><!--desktop-->
 
             <nav class="mobile">
                 <ul>
                     <li><a style="color: #EB2D2D;" href="">Home</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Venda</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="venda.html">Venda</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav><!--mobile-->
 
@@ -151,9 +151,9 @@
             <nav>
                 <ul>
                     <li><a style="color: #EB2D2D;" href="">Home</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Venda</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="venda.html">Venda</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div><!--container-->
